Deleted the Audio (Step Movement) added Camera Type Connectino with Supabase, Delete , Add, Update, Fetch

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,11 @@ dist-ssr
 *.sw?
 "public/*.glb" 
 "public/*.glb" 
+
+
+.env
+
+public/cctv.glb
+public/drone.glb
+public/dubai.glb
+public/interior.glb
