--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@react-three/drei": "^10.3.0",
     "@react-three/fiber": "^9.1.4",
+    "@supabase/supabase-js": "^2.50.3",
     "@tailwindcss/vite": "^4.1.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
